--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.7",
     "express": "^4.18.2",
+    "jogo-da-lerdinha": "file:",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
-    "tslib": "^2.3.0",
+    "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
