--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.7",
+    "bootstrap": "^5.3.5",
     "express": "^4.18.2",
     "jogo-da-lerdinha": "file:",
+    "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.8.1",
