--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.7",
+    "@nestjs/jwt": "^11.0.0",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.12.1",
     "express": "^4.18.2",
     "jogo-da-lerdinha": "file:",
+    "jsonwebtoken": "^9.0.2",
     "ngx-bootstrap": "^19.0.2",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
@@ -38,6 +41,7 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
