--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "bootstrap-icons": "^1.12.1",
     "express": "^4.18.2",
     "jogo-da-lerdinha": "file:",
+    "lucide-angular": "^0.507.0",
+    "ngx-mask": "^19.0.6",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.8.1",
