--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.7",
     "@nestjs/jwt": "^11.0.0",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.12.1",
     "express": "^4.18.2",
     "jogo-da-lerdinha": "file:",
+    "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.507.0",
     "ngx-mask": "^19.0.6",
     "rxjs": "~7.8.0",
