--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.7",
     "@nestjs/jwt": "^11.0.0",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.12.1",
     "express": "^4.18.2",
     "jogo-da-lerdinha": "file:",
     "lucide-angular": "^0.507.0",
-    "ngx-mask": "^19.0.6",
+    "ngx-bootstrap": "^19.0.2",
+    "ngx-mask": "^16.4.2",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.8.1",
