--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap-icons": "^1.12.1",
     "express": "^4.18.2",
     "jogo-da-lerdinha": "file:",
+    "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.507.0",
     "ngx-bootstrap": "^19.0.2",
     "ngx-mask": "^16.4.2",
