--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^11.0.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.12.1",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "jogo-da-lerdinha": "file:",
     "jwt-decode": "^4.0.0",
@@ -41,6 +42,7 @@
     "@angular-devkit/build-angular": "^19.1.7",
     "@angular/cli": "^19.1.7",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.9",
